Mas tests